syntax = "proto3";// proto version
import "google/protobuf/timestamp.proto"; //namespace for using google.protobuf.Timestamp type

option csharp_namespace = "GrpcService"; //we use this for creating our class in the given namespace

package Sensor;

// The sensor service definition.
service Sensor {
  // Sends a listen request
  rpc ListenSensors (SensorListenRequest) returns (stream SensorDataReply);
}

enum Condition { //you can create enums but they must start with 0
	EQUAL = 0;
	NOTEQUAL = 1;
	GREATHERTHAN = 2;
	LESSTHAN = 3;
}

//Type definition of the request object
message SensorListenRequest{
	repeated SensorRequest requests =1;
}
// The request message containing the sensor info.
message SensorRequest {
	string sensorId = 1;
	Condition conditon = 2;
	int32 conditionValue = 3;
	reserved 5, 9 to 11; //these unique numbers are deprecated, if some client use them, server are going to complain
	reserved "test", "name"; //these property names are deprecated, if some client use them, server are going to complain
}

// The response message containing the sensor data.
message SensorDataReply {
	string sensorId = 1;
	string message = 2;
	google.protobuf.Timestamp timeStamp =3;
}
